changed font size of pages

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div class="container pt-5 pb-5"><br>
       <h1>MY PROJECTS</h1><br>
-      <p>By showcasing some of my college project in my portfolio, I aim to demonstrate my ability to tackle complex frontend challenges, leverage modern technologies, and deliver solutions that align with the needs.</p>
+      <p style="font-size: large;">By showcasing some of my college project in my portfolio, I aim to demonstrate my ability to tackle complex frontend challenges, leverage modern technologies, and deliver solutions that align with the needs.</p>
     </div>
 
   </div>
