--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     font-size: large;
   }
   .para3{
-    font-size: large;
+    font-size: x-large;
   }
   .font{
     font-family: "Aboreto";
+    font-weight: bold;
   }
   html{
  font-size: small;
@@ -106,11 +107,11 @@
   <div class="container-fluid text-center" style="background-color: black;">
     <div class="row">
       
-      <div class="col-12 col-md-6 p-5">
-        <div class="container-fluid d-flex align-items-center justify-content-center text-dark" style="background: url('images/pic08.jpg') no-repeat; background-position: top; background-size: cover; height: auto; min-height: 60vh;"></div>
+      <div class="col-12 col-md-4 p-5">
+        <div class="container-fluid d-flex align-items-center justify-content-center text-dark" style="background: url('images/me.jpeg') no-repeat; background-position: top; background-size: cover; height: auto; min-height: 60vh;"></div>
         </div>
   
-      <div class="col-12 col-md-6 p-5">
+      <div class="col-12 col-md-8 p-5">
         <h1 class="font text-white">About Myself</h1><br><br>
       <p class="para3">Hello, my name is Manvir Kaur Brar. I was born on December 30, 2002 in India. 
         I have completed my senior secondary education from Punjab, India. Also I graduated from college\
